src/ui/components/CredCardTemplate/CredCardTemplate.scss
.cred-card-template {
  height: 13.375rem;
  width: 100%;
  margin-top: 1.5rem;
  padding: 1.25rem 1.56rem;
  border-radius: 1rem;
  font-size: 0.875rem;
  line-height: 1.375rem;
  overflow: hidden;

  &.active:not(:first-child).picked-card {
    // @TODO - foconnor: We should avoid this - animating with top.
    position: absolute;
    top: 0rem !important;
    margin-top: 0;
    transition: top 0.25s;
    box-shadow: none;
  }

  &.active.not-picked {
    transform: translate3d(0, 100vh, 0);
    transition: 0.5s ease-out;
  }

  &:not(:first-child) {
    margin-top: -10rem;
    box-shadow: 0px -5px 5px rgba(54, 60, 74, 0.25);
  }

  &.color-based-background {
    .cred-card-template-inner {
      color: var(--ion-color-light);

      &.pending .card-footer-column-label {
        color: white;
        text-transform: uppercase;
      }
    }
  }

  &.card-body-w3c-generic > img {
    position: absolute;
    top: -5%;
    left: -8%;
    width: 117%;
    max-width: 140%;
    opacity: 0.04;
  }

  &.card-body-w3c-generic,
  &.card-body-acdc {
    position: relative;
    background: var(--ion-color-gradient-w3c-card);
    text-shadow: 0px 2px 4px rgba(12, 64, 90, 0.5);

    .cred-card-template-inner {
      color: var(--ion-color-light);

      &.pending .card-footer-column-label {
        color: white;
      }

      .card-footer {
        display: flex;
        flex-direction: row;
        justify-content: space-between;

        .card-footer-column {
          display: flex;
          flex-direction: column;
          justify-content: center;

          &:first-child {
            .card-footer-column-label,
            .card-footer-column-value {
              text-align: left;
              width: calc(var(--scale-w) * 40);
            }
          }

          &:last-child {
            .card-footer-column-label,
            .card-footer-column-value {
              text-align: right;
              width: calc(var(--scale-w) * 30);
            }
          }

          .card-footer-column-label {
            font-size: 0.625rem;
            font-weight: 700;
            text-transform: uppercase;
          }

          .card-footer-column-value {
            font-weight: 700;
            font-size: 0.875rem;
          }
        }
      }
    }
  }

  &.card-body-acdc {
    background: var(--ion-color-gradient-acdc-credential);
  }

  &.access-pass-credential {
    position: relative;
    background: var(--ion-color-gradient-summit-card);
    text-shadow: 0px 2px 4px rgba(24, 148, 215, 0.2);

    > img {
      position: absolute;
      top: -12%;
      left: -115%;
      width: 330%;
      max-width: 330%;
      opacity: 0.04;
    }

    .cred-card-template-inner {
      color: var(--ion-color-primary);

      .card-body {
        display: flex;
        flex-direction: row;
        height: 100%;

        > div {
          display: flex;
          flex-direction: column;
          justify-content: flex-end;
          font-style: normal;
          line-height: normal;

          &.left-column {
            width: 65%;
          }

          &.right-column {
            width: 35%;

            #react-qrcode-logo {
              height: calc(
                (calc(var(--scale-w) * 100) - 4.778rem) * 0.35
              ) !important;
              width: calc(
                (calc(var(--scale-w) * 100) - 4.778rem) * 0.35
              ) !important;
            }
          }

          .card-body-info {
            display: flex;
            flex-direction: column;
            text-align: left;

            &:not(:first-of-type) {
              margin-top: 0.75rem;
            }

            .card-body-info-label {
              font-size: 0.625rem;
              font-weight: 700;
              color: var(--ion-color-secondary);
              text-transform: uppercase;
            }

            .card-body-info-value {
              font-size: 0.875rem;
              font-weight: 700;
              color: var(--ion-color-primary);
              margin-top: 0.31rem;
            }
          }
        }
      }
    }
  }

  &.permanent-resident-card {
    position: relative;
    background: var(--ion-color-gradient-residency-card);
    text-shadow: 0px 2px 4px rgba(187, 187, 187, 0.2);

    > img {
      position: absolute;
      top: -25%;
      left: 0%;
      width: 285%;
      max-width: 315%;
      opacity: 0.04;
    }

    .cred-card-template-inner {
      color: var(--ion-color-primary);

      .card-body {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        height: 100%;

        > div {
          display: flex;
          flex-direction: column;
          justify-content: flex-end;
          font-style: normal;
          line-height: normal;

          &.left-column {
            width: 33%;
            z-index: 1;

            img {
              border-radius: 0.5rem;
            }
          }

          &.center-column {
            width: 36%;
            margin-left: 0.5rem;
          }

          &.right-column {
            width: 25%;
            margin-left: 0.25rem;

            .card-body-info {
              text-align: right;
            }
          }

          .card-body-info {
            display: flex;
            flex-direction: column;
            text-align: left;

            &:not(:first-of-type) {
              margin-top: 0.75rem;
            }

            .card-body-info-label {
              font-size: 0.625rem;
              font-weight: 700;
              color: var(--ion-color-secondary);
              text-transform: uppercase;
            }

            .card-body-info-value {
              font-size: 0.875rem;
              font-weight: 700;
              color: var(--ion-color-primary);
              margin-top: 0.31rem;
            }
          }
        }
      }
    }
  }

  .cred-card-template-inner {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    &.pending {
      .card-body {
        margin-inline: 5rem;
      }

      .card-footer {
        display: flex;
        flex-direction: row;
        justify-content: space-between;

        .card-footer-column {
          display: flex;
          flex-direction: column;
          justify-content: center;

          &:first-child .card-footer-column-label {
            text-align: left;
          }

          &:last-child .card-footer-column-label {
            text-align: right;
          }

          .card-footer-column-label {
            font-size: 0.625rem;
            font-weight: 700;
          }

          .card-footer-column-value {
            width: calc(var(--scale-w) * 28);
            border-radius: 0.25rem;
            background: var(--ion-color-medium-grey);
          }
        }
      }
    }

    .card-header {
      display: flex;
      justify-content: space-between;
      font-weight: bold;

      .card-logo {
        display: flex;
        flex-direction: row;
        line-height: normal;

        img {
          margin-right: 0.5rem;
          max-height: 1.375rem;
        }
      }

      ion-chip {
        max-height: 1.625rem;
        font-weight: 400;
        font-size: 0.75rem;
        background: var(--ion-color-medium-grey);
        border-radius: 0.25rem;
        padding: 0.375rem 0.625rem;

        ion-icon {
          width: 0.875rem;
          height: 0.875rem;
          margin: 0;
        }

        span {
          text-transform: capitalize;
          margin-left: 0.31rem;
        }
      }
    }

    .card-body {
      font-size: 0.625rem;
      text-align: center;
    }
  }

  @media screen and (min-width: 250px) and (max-width: 370px) {
    height: 10.7rem;
    margin-top: 1.275rem;
    padding: 1.06rem 1.326rem;
    border-radius: 0.85rem;
    font-size: 0.75rem;
    line-height: 1.169rem;

    &:not(:first-child) {
      margin-top: -8.8rem;
    }

    &.card-body-w3c-generic {
      .cred-card-template-inner {
        .card-footer {
          .card-footer-column {
            .card-footer-column-label {
              font-size: 0.46875rem;
            }

            .card-footer-column-value {
              font-size: 0.65625rem;
            }
          }
        }
      }
    }

    &.access-pass-credential {
      .cred-card-template-inner {
        color: var(--ion-color-primary);

        .card-body {
          > div {
            .card-body-info {
              &:not(:first-of-type) {
                margin-top: 0.5625rem;
              }

              .card-body-info-label {
                font-size: 0.46875rem;
              }

              .card-body-info-value {
                font-size: 0.65625rem;
                margin-top: 0.2325rem;
              }
            }
          }
        }
      }
    }

    &.permanent-resident-card {
      .cred-card-template-inner {
        .card-body {
          > div {
            &.left-column {
              img {
                border-radius: 0.375rem;
              }
            }

            &.center-column {
              margin-left: 0.375rem;
            }

            &.right-column {
              margin-left: 0.1875rem;
            }

            .card-body-info {
              &:not(:first-of-type) {
                margin-top: 0.5625rem;
              }

              .card-body-info-label {
                font-size: 0.46875rem;
              }

              .card-body-info-value {
                font-size: 0.65625rem;
                margin-top: 0.2325rem;
              }
            }
          }
        }
      }
    }

    .cred-card-template-inner {
      &.pending {
        .card-body {
          margin-inline: 3.75rem;
        }

        .card-footer {
          .card-footer-column {
            .card-footer-column-label {
              font-size: 0.46875rem;
            }

            .card-footer-column-value {
              border-radius: 0.1875rem;
            }
          }
        }
      }

      .card-header {
        .card-logo {
          img {
            margin-right: 0.375rem;
            max-height: 1.03125rem;
          }
        }

        ion-chip {
          max-height: 1.21875rem;
          font-size: 0.5625rem;
          border-radius: 0.1875rem;
          padding: 0.28125rem 0.46875rem;

          ion-icon {
            width: 0.65625rem;
            height: 0.65625rem;
            margin: 0;
          }

          span {
            margin-left: 0.2325rem;
          }
        }
      }

      .card-body {
        font-size: 0.46875rem;
      }
    }
  }
}

